Fix high contrast mode better, thanks to @GeeLaw (#733)

--- a/static/katex.less
+++ b/static/katex.less
@@ -22,8 +22,9 @@
     // Protect elements inside .katex from inheriting text-indent.
     text-indent: 0;
 
-    // Prevent background resetting in Windows's high-contrast mode.
-    -ms-high-contrast-adjust: none !important;
+    // Prevent background resetting on elements in Windows's high-contrast
+    // mode, while still allowing background/foreground setting on root .katex
+    * { -ms-high-contrast-adjust: none !important; }
 
     .katex-html {
         // Making .katex inline-block allows line breaks before and after,
